--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
               </svg>
             </button>
             <div class="menu-container-mobile" id="menu-container-mobile" data-menu>
-              <ul class="nav list">
-                <li><a class="nav-link-active link" href="#">Студия</a></li>
-                <li><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="nav-link link" href="#">Контакты</a></li>
-              </ul>
-              
+              <div class="nav-tablet">
+                <ul class="nav-links list">
+                  <li><a class="nav-link-active link" href="#">Студия</a></li>
+                  <li><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+                  <li><a class="nav-link link" href="#">Контакты</a></li>
+                </ul>
+              </div>
               <ul class="nav list items">
                 <li class="nav list items">
                   <div class="nav-contacts">
-                    <svg class="nav-icon-mail" width="16" height="12">
+                    <svg class="nav-icon-mail" width="14" height="10">
                       <use class="icon-mail" href="./images/sprite.svg#icon-mail"></use>
                     </svg>
                     <a class="nav-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -44,7 +45,7 @@
               
                 <li class="nav list items">
                   <div class="nav-contacts">
-                    <svg class="nav-icon-tel" width="10" height="16">
+                    <svg class="nav-icon-tel" width="10" height="14">
                       <use class="icon-tel" href="./images/sprite.svg#icon-tel"></use>
                     </svg>
                     <a class="nav-tel link" href="tel:380961111111">+38 096 111 11 11</a>
