--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
               <use href="./images/sprite.svg#icon-close"></use>
             </svg>
           </button>
-          <form class="form">
+          <form class="form-box">
             <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
           
             <label class="form-field">
